Update pricing section with new plans and free consultation badge

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -193,36 +193,49 @@
   },
   "pricing": {
     "title": "Цены",
-    "subtitle": "Простые и прозрачные тарифы",
+    "subtitle": "Прозрачные тарифы для вашего бизнеса",
+    "freeBadge": "Консультация бесплатно",
     "button": "Выбрать",
-    "badge": "Лучший выбор",
+    "badge": "Популярный",
     "plans": [
       {
-        "name": "Консультация",
-        "price": "Бесплатно",
-        "features": ["Видеосозвон", "Оценка задачи", "Рекомендации"]
-      },
-      {
-        "name": "Лендинг + Бот",
-        "price": "$300",
+        "name": "Чат-боты и автоматизация",
+        "price": "от $50",
+        "description": "Малому бизнесу, интернет-магазинам и сервисам, которые хотят ускорить обработку заявок и снизить ручную работу",
         "features": [
-          "Лендинг",
-          "Telegram-бот,Instagram-бот",
-          "CRM-интеграция с вашим API",
-          "Адаптивность",
-          "2 месяца поддержки"
+          "Боты для бизнеса (Telegram / WhatsApp)",
+          "Автоматизация ответов и заявок",
+          "Подключение CRM",
+          "Интеграции с сайтами и Shopify",
+          "Уведомления, формулы, воронки",
+          "Сбор и передача данных (Google Sheets, CRM)",
+          "Настройка Webhooks / API"
         ]
       },
       {
-        "name": "Сайт + CRM",
-        "price": "$600",
+        "name": "Лендинг",
+        "price": "от $100",
+        "description": "Для небольших бизнесов, тестирования ниши и первого онлайн-присутствия",
         "features": [
-          "Многостраничный сайт(до 5 страниц)",
-          "CRM-система, CRM-интеграция с вашим API",
-          "Автоматизация процессов",
-          "Аналитика",
-          "6 месяцев поддержки",
-          "Приоритетная связь"
+          "Профессиональная разработка дизайна",
+          "Поддержка 1 месяц",
+          "Настройка домена и хостинга",
+          "Подключение Meta Pixel для рекламы",
+          "Адаптивная вёрстка под все устройства"
+        ]
+      },
+      {
+        "name": "Интернет-магазин + Аналитика",
+        "price": "от $450",
+        "description": "Полноценное решение для e-commerce с интеграцией аналитики и автоматизацией",
+        "features": [
+          "Shopify-магазин (5–7 секций)",
+          "Загрузка 30–50 товаров",
+          "Подключение доставки и оплаты",
+          "CRM-интеграция (Telegram бот + Google Sheets или AmoCRM)",
+          "Настройка Meta Pixel + события (ViewContent, AddToCart, Purchase)",
+          "Подключение аналитики (GA4 + Meta CAPI)",
+          "Поддержка 1 месяц"
         ]
       }
     ]
