Update portfolio projects: replace ads with e-commerce, mini-CRM with CRM integration

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -139,27 +139,27 @@
         ]
       },
       {
-        "title": "Таргетированная реклама",
-        "tag": "Маркетинг",
-        "description": "Запуск и ведение рекламы в Instagram, TikTok и Facebook с оптимизацией.",
-        "tech": ["Meta Ads", "TikTok Ads", "Google Analytics", "Meta Pixel"],
+        "title": "Создание интернет-магазинов",
+        "tag": "E-commerce",
+        "description": "Полноценный интернет-магазин на Shopify с интеграцией платежей, доставки и аналитикой.",
+        "tech": ["Shopify", "Liquid", "Meta Pixel", "Google Analytics"],
         "features": [
-          "Анализ ниши",
-          "Настройка кампаний",
-          "A/B тестирование",
-          "Оптимизация результатов"
+          "Настройка каталога товаров",
+          "Интеграция оплаты и доставки",
+          "Мобильная адаптация",
+          "Настройка аналитики"
         ]
       },
       {
-        "title": "Мини-CRM для бизнеса",
-        "tag": "CRM",
-        "description": "Простая CRM для лидов, заказов и клиентов — всё в одном месте.",
-        "tech": ["React", "Node.js", "PostgreSQL", "Supabase"],
+        "title": "Подключение CRM систем",
+        "tag": "Интеграция",
+        "description": "Интеграция и настройка CRM-систем для автоматизации продаж и управления клиентами.",
+        "tech": ["AmoCRM", "Bitrix24", "API", "Webhooks"],
         "features": [
-          "Список клиентов",
-          "Управление статусами",
-          "Напоминания",
-          "Экспорт данных"
+          "Настройка воронок продаж",
+          "Автоматизация процессов",
+          "Интеграция с сайтом и ботами",
+          "Обучение команды"
         ]
       }
     ]
